# 4-semestr-miniproject

./: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml
marketplace/: db.sqlite3
marketplace/cart/: models.py  urls.py  views.py
marketplace/cart/migrations/: 0001_initial.py
marketplace/listing_manage/: apps.py  tests.py  urls.py  views.py
marketplace/listing_manage/migrations/: 0001_initial.py
marketplace/listing_manage/templates/: listing_manage.html  listings-manage-overview.html
marketplace/main/: admin.py  choices.py  filters.py  forms.py  urls.py  views.py
marketplace/main/migrations/: 0001_initial.py  0002_initial.py  0002_remove_listing_name_listing_user.py  0003_alter_listing_pictures.py  0003_order_title.py  0004_response.py  0005_order.py  0006_rename_product_order_listing.py  0007_remove_order_user_or_tem_user_is_filled_and_more.py
marketplace/main/models/: __init__.py  category.py  listing.py  order.py  responces.py
marketplace/main/templates/: create-listing.html  index.html  listing-details.html
marketplace/marketplace/: settings.py  urls.py
marketplace/templates/account/: login.html  logout.html  password_change.html  password_reset.html  signup.html
marketplace/templates/base/: base.html
marketplace/user/: forms.py  models.py  urls.py  views.py
marketplace/user/migrations/: 0001_initial.py  0002_subscription.py  0002_usersellers.py  0003_rename_company_name_usersellers_username.py  0003_user_follows_delete_subscription.py  0004_delete_usersellers.py  0004_remove_user_follows.py  (+6 more)
(+15 files in other folders)
