[project]
name = "4-semestr-miniproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "django-allauth (>=65.13.0,<66.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-lifecycle (>=1.2.4,<2.0.0)",
    "django-render-block (>=0.11,<0.12)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-star-ratings (>=0.9.2,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
